Helm/ArgoCD/namespace/ilba-homer/10-deploy-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: ilba-homer
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: homer
  template:
    metadata:
      labels:
        run: homer
    spec:
      containers:
      - name: homer
        image: b4bz/homer:22.02.1
        ports:
        - name: http
          containerPort: 8080 
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 45
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 10
        volumeMounts:
        - name: homer-conf
          mountPath: /www/default-assets
      volumes:
        - name: homer-conf
          persistentVolumeClaim:
            claimName: homer-conf-pvc
