Helm/ArgoCD/namespace/ilba-homer/05-ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: ilba-homer
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: homer.ilba.ilimit.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
               service:
                  name: svc-homer
                  port:
                    number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-homer
  namespace: ilba-homer
  labels:
    run: homer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    run: homer
